# opensim-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  groq_question_generator.py  nvidia_question_generator.py  pyproject.toml  requirements.txt  tasks.md
.claude/: config.yaml  rules.md  skills.md
.githooks/: post-commit  pre-commit  pre-push
backend/: abstract.py  aer_automatic.py  aer_mps.py  aer_statevector.py  aer_tensor_net.py  config.py  environment.py  gpu_poll.py  groq_advisor.py  llm_advisor.py  model_catalog.py
benchmark/: checkpoint.py  circuit_fingerprint.py  entanglement.py  metrics.py  quality.py  runner.py  schema.py  sweep_config_0a.yaml  sweep_config_0a_gpu.yaml  sweep_config_0b.yaml  sweep_config_18q_qaoa_gap.yaml  sweep_config_22q.yaml  sweep_config_24q.yaml  sweep_config_5q.yaml  sweep_config_colab.yaml  sweep_config_colab_18.yaml  sweep_config_colab_22-28.yaml  sweep_config_colab_26-28.yaml  sweep_config_local.yaml  sweep_config_medium.yaml  sweep_config_qaoa_rerun.yaml  sweep_config_small.yaml
colab/: OpenQSim_Colab.ipynb  README.md
doc/: Development Workflow..md  HANDOFF_MPS_BACKEND.md  HANDOFF_SESSION2_DEEPSEEK.md  OPENSIM_SCOPE.md  OpenQSim.md  ROADMAP.MD  dataset_card.MD  filedirectry.md  workflow.md
frontend/: dashboard.py
kaggle/: KaggleNotebook_GPU.ipynb  KaggleNotebooktemplate.ipynb  __init__.py  api_client.py  checkpoint.py  dataset_assembler.py  environment.py  run_sweep.py  runner.py
scripts/: fix_failed_qaoa.py  organize_data.py  rerun_qaoa.py  run_sweep.bat  run_sweep.py  run_sweep.sh  (+4 more)
(+29 files in other folders)
